
* GITHUB#12239: Hunspell: reduced suggestion set dependency on the hash table order (Peter Gromov)

======================== Lucene 9.8.0 =======================

API Changes
---------------------

* GITHUB#11248: IntBlockPool's SliceReader, SliceWriter, and all int slice functionality are moved out to MemoryIndex.
  (Stefan Vodita)

New Features
---------------------

* GITHUB#12383: Introduced LeafCollector#finish, a hook that runs after
  collection has finished running on a leaf. (Adrien Grand)

Improvements
---------------------
* GITHUB#12374: Add CachingLeafSlicesSupplier to compute the LeafSlices for concurrent segment search (Sorabh Hamirwasia)

Optimizations
---------------------

* GITHUB#12377: Avoid redundant loop for compute min value in DirectMonotonicWriter. (Chao Zhang)

* GITHUB#12361: Faster top-level disjunctions sorted by descending score.
  (Adrien Grand)

* GITHUB#12383: Assign a dummy simScorer in TermsWeight if score is not needed. (Sagar Upadhyaya)

* GITHUB#12372: Reduce allocation during HNSW construction (Jonathan Ellis)

* GITHUB#12385: Restore parallel knn query rewrite across segments rather than slices (Luca Cavanna)

* GITHUB#12381: Speed up NumericDocValuesWriter with index sorting. (Chao Zhang)

Bug Fixes
---------------------

* GITHUB#9660: Throw an ArithmeticException when the offset overflows in a ByteBlockPool. (Stefan Vodita)

* GITHUB#12388: JoinUtil queries were ignoring boosts. (Alan Woodward)

* GITHUB#12413: Fix HNSW graph search bug that potentially leaked unapproved docs (Ben Trent).

* GITHUB#12423: Respect timeouts in ExitableDirectoryReader when searching with byte[] vectors (Ben Trent).

Other
---------------------

* GITHUB#12404: Remove usage and add some legacy java.util classes to forbiddenapis (Stack, Hashtable, Vector).
  (Uwe Schindler)

* GITHUB#12410: Refactor vectorization support (split provider from implementation classes).
  (Uwe Schindler, Chris Hegarty)
